--- a/assignment06.qmd
+++ b/assignment06.qmd
@@ -11,7 +11,7 @@ execute:
 
 ## Exercise 02 Paper Overview
 
-@martinez2018 conducted a randomized controlled trial to test the effect of a complementary feeding education program on stunted children in Guatemala. 324 stunted children with height-for-age Z score (HAZ) less than to equal to -2.5 SD were divided into the control ($N$=163) and the treatment group ($N$=161). The control group received usual care, while the treatment group received individualized caregiver complementary feeding education in addition to usual care. HAZ is a continuous random variable, and the difference in HAZ between control and treatment indicates the efficacy of the education program, which can be assessed with Student's z. According to the data [@rohloff], the authors fail to reject the null hypothesis that there is no significant difference in the change in height-for-age Z score between the control and treatment. We will be reanalyzing their null hypothesis.
+@martinez2018 conducted a randomized controlled trial to test the effect of a complementary feeding education program on stunted children in Guatemala. 324 stunted children with height-for-age Z score (HAZ) less than or equal to -2.5 SD were divided into the control ($N$=163) and the treatment group ($N$=161). The control group received usual care, while the treatment group received individualized caregiver complementary feeding education in addition to usual care. HAZ is a continuous random variable, and the difference in HAZ between control and treatment indicates the efficacy of the feeding education program, which can be assessed with Student's t-test. According to the data [@rohloff], the authors fail to reject the null hypothesis that there is no significant difference in the change in height-for-age Z score between the control and treatment. We will be reanalyzing their null hypothesis.
 
 ## Exercise 03 Load, Clean, and Tidy Data
 
@@ -22,7 +22,7 @@ library(readxl)
 feeding<-read_excel(here("feeding.xls"))
 ```
 
-```{r tidy data, output=FALSE}
+```{r tidy data for KDE, output=FALSE}
 glimpse(feeding)
 feeding_tidy<-feeding |>
   select(Grupo,HAZ_pre,HAZ_post)|>
@@ -35,6 +35,8 @@ feeding_tidy<-feeding |>
 
 ## Exercise 04 KDE
 
+### KDE: HAZ Difference in the Entire Sample
+
 ```{r}
 feeding_tidy|>
   ggplot(mapping = aes(x = diff_HAZ)) +
@@ -42,10 +44,33 @@ feeding_tidy|>
   labs(title = "Kernel Density Estimation of Differences in HAZ",
        x = "HAZ Difference", 
        y = "Density")
+
+# display summary statistics for the variable
 summary(feeding_tidy$diff_HAZ)
 ```
 
-This KDE estimates the probability density of height-for-age Z score (HAZ) difference in the sample. HAZ difference ranges from -1.49 to 1.24 with a mean and a median of 0.01. The curve is symmetrical and bell-shaped, indicating that the change in HAZ across control and treatment group is normally distributed in the sample. HAZ difference is concentrated at 0, meaning that in the 296 observations (excluding NA values), there is mostly no difference in HAZ pre-intervention and post-intervention. 
+This KDE estimates the probability density of height-for-age Z score (HAZ) difference in the entire sample, including control and treatment. HAZ difference ranges from -1.49 to 1.24 with equal mean and median of 0.01. The curve is almost symmetrical and bell-shaped, indicating that the difference in HAZ is close to being normally distributed in the sample. HAZ difference is concentrated at 0, meaning that in the 296 observations (after excluding NA values), there is mostly no difference between HAZ pre-intervention and post-intervention in the entire sample.
+
+### KDE: HAZ Difference in Treatment
+
+```{r}
+feeding_tidy_treatment<-feeding_tidy|>
+  filter(group == 1)
+
+feeding_tidy_treatment |>
+  ggplot(mapping = aes(x = diff_HAZ))+
+  geom_density(color = "red") +
+  labs(title = "Kernel Density Estimation of Differences in HAZ in Treatment",
+       x = "HAZ Difference", 
+       y = "Density")
+
+summary(feeding_tidy_treatment$diff_HAZ)
+
+```
+
+This KDE estimates the probability density of height-for-age Z score (HAZ) difference in the treatment group ($N=145$). HAZ difference ranges from -1.49 to 1.24 with equal mean and median of 0.05. HAZ is almost symmetrical and bell-shaped, indicating that the difference in HAZ is close to be normally distributed in the treatment group. HAZ difference is concentrated around 0, meaning that in the treatment group, there is mostly no difference between HAZ pre-intervention and post-intervention.
+
+### KDE: HAZ Baseline
 
 ```{r}
 feeding_tidy|>
@@ -54,10 +79,13 @@ feeding_tidy|>
   labs(title = "Kernel Density Estimation of Baseline HAZ", 
        x = "HAZ at Baseline", 
        y = "Density")
+
 summary(feeding_tidy$HAZ_pre)
 ```
 
-This KDE estimates probability density of height-for-age Z score (HAZ) at baseline. HAZ at baseline ranges from -5.47 to -0.17 with a mean of -3.42 and a median of -3.33. Observations are concentrated at around -3, meaning that a baseline HAZ at about -3 is the most common in the sample. The shape of the distribution is skewed to the right, with the right tail (greater values) longer than the left tail (smaller values). In a  right-skewed distribution, there are fewer children with a high HAZ than with a lower HAZ. The distribution makes sense because the study chooses stunted children sample based on the criterion that the child's baseline HAZ is less than or equal to -2.5SD [@martinez2018].
+This KDE estimates probability density of height-for-age Z score (HAZ) at baseline. HAZ at baseline ranges from -5.47 to -0.17 with a mean of -3.42 and a median of -3.33. Observations are concentrated at around -3, meaning that a baseline HAZ at about -3 is the most common in the sample. The shape of the distribution is skewed to the right, with the right tail (greater values) longer than the left tail (smaller values). In a right-skewed distribution, there are fewer children with a high HAZ than with a lower HAZ. The distribution makes sense because the study chooses stunted children sample based on the criterion that the child's baseline HAZ is less than or equal to -2.5SD [@martinez2018].
+
+### KDE: HAZ Post-Intervention
 
 ```{r}
 feeding_tidy|>
@@ -66,18 +94,28 @@ feeding_tidy|>
   labs(title = "Kernel Density Estimation of HAZ After Intervention", 
        x = "HAZ After Intervention", 
        y = "Density")
+
 summary(feeding_tidy$HAZ_post)
+
+# get the most common occurrences of post-intervention HAZ
+feeding_tidy|>
+  count(HAZ_post)|>
+  arrange(desc(n))
 ```
-This KDE estimates probability density of height-for-age Z score (HAZ) after intervention. HAZ after intervention ranges from -5.35 to -0.81 with a mean  of -3.40 and a median of -3.38. Similar to KDE of HAZ at baseline, observations are concentrated at around -3, meaning that a HAZ of about -3 after intervention is the most common in the sample. The distribution is less skewed but is still right skewed since the median is less the mean. There are more children with a lower HAZ than a higher HAZ post intervention.
+
+This KDE estimates probability density of height-for-age Z score (HAZ) after intervention. HAZ after intervention ranges from -5.35 to -0.81 with a mean of -3.40 and a median of -3.38. The mode of the sample for post-intervention HAZ is -3.07, and the second most common occurrence is -3.45. The distribution is still right skewed since the median is less than the mean. There are more children with a lower HAZ than a higher HAZ post intervention.
 
 ## Exercise 05 LOESS
 
-```{r}
+```{r tidy data for lOESS}
 feeding_LOESS<-feeding|>
   select(WAZ_pre,WAZ_post,HAZ_pre,HAZ_post)|>
   na.omit()
+```
 
-# Visualize the relationship between weight-for-age Z score and height-for-age Z score at baseline 
+#### Weight and Height at Baseline
+
+```{r}
 feeding_LOESS|>
   ggplot(mapping = aes(x = WAZ_pre, y = HAZ_pre)) +
   geom_smooth(method = "loess") +
@@ -85,10 +123,12 @@ feeding_LOESS|>
          x = "Weight-for-age Z score (WAZ)",
          y = "Height-for-age Z score (HAZ)")
 ```
-Children's weight-for-age Z score and height-for-age Z score at baseline are positively correlated. It makes sense because the more that the child weighs, the greater the height.
+
+Children's weight-for-age Z score and height-for-age Z score at baseline are positively correlated. It makes sense because as their weight increases, their height also increases.
+
+#### Weight and Height Post-Intervention
 
 ```{r}
-# Visualize the relationship between weight-for-age Z score and height-for-age Z score post intervention
 feeding_LOESS|>
   ggplot(mapping = aes(x = WAZ_post, y = HAZ_post)) +
   geom_smooth(method = "loess") +
@@ -96,19 +136,20 @@ feeding_LOESS|>
          x = "Weight-for-age Z score (WAZ)",
          y = "Height-for-age Z score (HAZ)")
 ```
-Children's weight-for-age Z score and height-for-age Z score at the exit of the study are positively correlated. It makes sense because the more that the child weighs, the greater the height.
+
+Similarly, children's weight-for-age Z score and height-for-age Z score at the exit of the study are positively correlated. Height increases as weight increases.
 
 ## Exercise 06 Non-parametric testing
 
 ### 6.1 Assumptions
 
-The authors uses a two-sample t-test to test the null hypothesis that treatment group does not affect height-for-age Z score. The assumptions they use are
+@martinez2018 uses a two-sample t-test to test the null hypothesis that the feeding education program does not affect height-for-age Z score. The assumptions are
 
 1\. Data in control and treatment group is a random sample drawn from the population since this is a randomized controlled trial (RCT).
 
 2\. Height-for-age Z score is normally distributed.
 
-3\. The population have equal variances, verified by the test below. There is insufficient evidence to reject the null that the population have equal variances. The variances are equal.
+3\. The population have equal variances, verified by the test below. There is insufficient evidence to reject the null that the population have equal variances. The variances are therefore equal.
 
 ```{r}
 feeding_tidy |>
@@ -119,7 +160,7 @@ feeding_tidy |>
 var.test(diff_HAZ ~ group, data = feeding_tidy)
 ```
 
-In non-parametric testing, there are less assumptions. For example, it only assumes that data from the population is continuous, with no assumption on the specific distribution.
+In non-parametric testing, there are less assumptions. For example, it only assumes that data from the population is continuous, with no assumption on the specific distribution form such as normal distribution.
 
 ### 6.2 Null and Alternative Hypothesis
 
@@ -127,7 +168,7 @@ $H_0:\mu_{control}=\mu_{treatment}$
 
 $H_a:\mu_{control}\neq\mu_{treatment}$
 
-If p-value is less than 0.5, we will reject the null and conclude that there is a significant difference in population mean HAZ difference between control and treatment group.
+If *p* value is less than 0.5, we will reject the null and conclude that there is a significant difference in the population mean HAZ change between control and treatment group.
 
 ### 6.3 Permutation Test
 
@@ -157,4 +198,4 @@ perm_dist |>
 
 ### 6.4 Interpretation
 
-The 2-Sample Difference of Means test shows that *p* value is greater than 0.05. There is insufficient evidence to reject the null hypothesis at 5% significance level. We conclude that the mean change in height-for-age Z score is not statistically different between control and treatment. The non-parametric testing reaches the same conclusion as the paper that the complementary feeding education program does not improve stunted children' height-for-age Z score.
+The 2-Sample Difference of Means test shows that *p* value is greater than 0.05. There is insufficient evidence to reject the null hypothesis at 5% significance level. We conclude that the mean change in height-for-age Z score in the treatment group is not statistically from that in the control control. The non-parametric testing reaches the same conclusion as the paper--the complementary feeding education program does not improve stunted children' height-for-age Z score.
